fix(collapse):#MEN-683 fix size of collapse

--- a/scss/moodle/login.scss
+++ b/scss/moodle/login.scss
@@ -619,9 +619,11 @@
       & > a {
         padding-left: 20px !important;
         background: url([[pix:t/expanded]]) 2px center no-repeat;
+        background-size: 16px 16px;
 
         &.collapsed {
           background: url([[pix:t/collapsed]]) 2px center no-repeat;
+          background-size: 16px 16px;
         }
       }
     }
